# muse

./: .env  .env_example  .gitignore  .gitmodules  3rdpartylicenses.txt  404.html  Cargo.toml  Old_Client.tar.xz  README.md  build.rs  build_tailwind.sh  manifest.webmanifest  ngsw.json  package-lock.json  styles-BHKFZXHR.css  worker-QSKXZDKD.js
Client/: README.md  angular.json  copy-and-clean.js  electron-builder.json  electron-main.ts  eslint.config.mjs  index.html  nx.json  package-lock.json  package.json  proxy.conf.json  server-api-reference.md  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
Client/apps/electron/: jest.config.ts  project.json
Client/apps/electron/src/app/: app.ts  constants.ts
Client/apps/muse/: jest.config.ts  project.json  tsconfig.worker.json
Client/apps/muse/src/: index.html  manifest.webmanifest  styles.scss
Client/apps/muse/src/app/: app.config.ts
Client/apps/muse/src/app/component/add-to-playlist-popup/: add-to-playlist-popup.ts
Client/apps/muse/src/app/component/music-player/: music-player.ts
Client/apps/muse/src/app/pages/login/: login.ts
Client/apps/muse/src/app/pages/shared/: card.scss
Client/apps/muse/src/app/services/: image-loader.service.ts
Client/apps/muse/src/environments/: environment.ts
Client/electron-dist/: electron-main.js
Client/src/: index.html  main.ts  muse-dark.scss  styles.css  styles.scss
Client/src/app/: app.config.ts  app.css  app.routes.ts  app.ts  axios-interceptor.ts
Client/src/app/component/add-to-playlist-popup/: add-to-playlist-popup.css  add-to-playlist-popup.html  add-to-playlist-popup.scss  add-to-playlist-popup.ts
Client/src/app/component/music-player/: music-player.html  music-player.sass  music-player.scss  music-player.service.ts  music-player.ts
Client/src/app/data/: playlist.ts  song.ts
Client/src/app/pages/artists/: artists.ts
Client/src/app/pages/list/: list.css  list.html  list.scss  list.ts
Client/src/app/pages/login/: login.css  login.html  login.scss  login.ts
Client/src/app/pages/main/: main.css  main.html  main.scss  main.ts
Client/src/app/pages/main/artists/: artists.css  artists.html  artists.scss  artists.ts
Client/src/app/pages/main/playlist/: playlist.css  playlist.html  playlist.scss  playlist.ts
Client/src/app/pages/main/profile/: profile.scss  profile.ts
Client/src/app/pages/main/songs/: songs.html  songs.scss  songs.ts
Client/src/app/pages/shared/: card.css  card.scss  image-loader.worker.ts  meta-cache.service.ts
Client/src/app/pages/songs/: songs.css  songs.html  songs.ts
Client/src/app/services/: api.service.ts  image-loader.service.ts  image-loader.worker.ts  meta-cache.service.ts  music-player.service.ts
Client/src/electron/: main.ts  tsconfig.json
Client/src/environments/: environment.prod.ts
Client/src/lib/: api.ts
Client/src/routes/: +layout.svelte  +page.svelte
Client/src/routes/app/components/: artist-list.svelte  songs-list.svelte
Client/src/routes/components/: artist-list.svelte  songs-list.svelte
Client/src/routes/login/: +page.svelte
Client/src/ui/: App.tsx  index.css  main.tsx
Client/src/ui/components/: MusicPlayer.tsx  sidebar.tsx
Client/src/ui/contexts/: AuthContext.tsx
Client/src/ui/pages/: Artists.tsx  Favorites.tsx  Library.tsx  Login.tsx  Playlists.tsx  Profile.tsx  Register.tsx
Client/src/ui/services/: api.ts
Server/: .env_example  Cargo.toml  Dockerfile  README.md  _.tar.xz  generate-certs.bat  generate-certs.sh
Server/.cargo/: config.toml
Server/docs/: CACHE_FORMATS.md  HTTPS_SETUP.md  api-reference.md  configuration.md  installation.md  technical-overview.md  usage.md
Server/old/: images.rs  mod.rs  playlist.rs  stream.rs  util.rs
Server/src/: https.rs  main.rs
Server/src/api/: admin.rs  artists.rs  auth.rs  images.rs  io_util.rs  login.rs  mod.rs  playlist.rs  playlists.rs  response.rs  songs.rs  stream.rs  streaming.rs  user.rs  users.rs
Server/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
Server/src/db/: actions.rs  mod.rs  models.rs  mongo.rs  postgres.rs  sqlite.rs
Server/src/db/action/: artist.rs  mod.rs  playlist.rs  song.rs  user.rs
Server/src/db/schema/: artist.rs  artist_song_association.rs  mod.rs  playlist.rs  playlist_song_association.rs  session.rs  song.rs  user.rs
Server/src/db/util/: mod.rs
Server/src/login/: register_form.rs
Server/src/music/: mod.rs  scanner.rs
Server/src/util/: mod.rs  transcoder.rs
Server/src/util/cache/: bson_ext.rs  img_ext.rs  mod.rs
Tools/YtDownloader/: Cargo.toml  test.ps1  test.sh
Tools/YtDownloader/src/: main.rs  yt_audio.rs
Tools/YtExplodeCli/: JsonContexts.cs  Models.cs  Program.cs  YtExplodeCli.csproj  build-fat.sh
assets/: actions.js  tailwind.css
browser/: index.html  main-574SCH57.js  ngsw.json
runtime/: index.html
runtime/assets/: manifest.json  robots.txt  sitemap.xml
runtime/assets/css/: artists.css  colour.css  common.css  index.css  lists.css  login_style.css  songs.css  style.css  sweetalert2.css
runtime/assets/font/: fonts.css
runtime/assets/js/: audioPlayer.js  dom.js  imageObserver.js  login_script.js  navigation.js  playlist-dropdown.js  script.js  sw.js  ui.js  utils.js
runtime/templates/: artists.jinja  base.jinja  lists.jinja  songs.jinja
src/: debug.rs  main.rs
src/api/: mod.rs  music_brainz.rs
src/db/: actions.rs  mod.rs
src/db/schema/: album.rs  artist.rs  artist_song_association.rs  mod.rs  music_brainz.rs  playlist.rs  playlist_song_association.rs  session.rs  song.rs  sql_share.rs  user.rs
src/db/util/: sql_array_string.rs
src/login/: login_form.rs  mod.rs  register_form.rs
src/util/: async_sync.rs  mod.rs
src/web/: api.rs  cache.rs  home.rs  images.rs  list.rs  login.rs  mod.rs  pages.rs  song_images.rs  static.rs  static_files.rs  stream.rs
statics/: index.html  login.html  register.html
statics/templates/: artists.jinja  base.jinja  home.jinja  lists.jinja  playlist_details.jinja  playlists.jinja  profile.jinja  songs.jinja
templates/: base.jinja  index.jinja  song.jinja  songs.jinja
tools/: tailwind.config.js
(+6 files in other folders)
