[package]
name = "muse"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower-http = {version = "0.6.6" , features = ["compression-full"]}
tower-cookies = "0.11.0"
tower_governor = "0.7.0"
minijinja = { version = "2.10.2", features = ["loader"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "uuid",
    "time"
] }
uuid = { version = "1.17.0", features = ["v4"] }
id3 = { version = "1.16.3", features = ["tokio"]}
once_cell = "1.20.3"
async-recursion = "1.1.1"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
rustrict = "0.7.35"
bcrypt = "*"
rust-embed = "8.6.0"
reqwest = { version = "0.12.20", features = ["json"] }
base64 = "0.22.1"
serde_json = "1.0.140"
futures = "0.3.31"
arrayvec = "0.7.6"
dashmap = "7.0.0-rc2"
urlencoding = "2.1.3"
time = { version = "0.3.41", features = ["serde"] }
which = "8.0.0"
tokio-util = "0.7.15"
regex = "1.11.1"
bytes = "1.10.1"