[package]
name = "muse"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime - optimized features
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "macros",
    "sync",
    "time",
    "process"
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower-http = { version = "0.6.6", features = ["compression-full","auth","cors"] }

# Database
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "uuid",
    "time"
] }

# Utilities
uuid = { version = "1.17.0", features = ["v4"] }
id3 = { version = "1.16.3", features = ["tokio"] }
once_cell = "1.21.3"
async-recursion = "1.1.1"
dotenvy = "0.15.7"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
bincode = "2.0.1"

# Validation and security
validator = { version = "0.20.0", features = ["derive"] }
rustrict = "0.7.35"
bcrypt = "0.17.0"

# HTTP client
reqwest = { version = "0.12.20", features = ["json"] }

# Encoding and data formats
base64 = "0.22.1"
bson = { version = "2.15.0", features = ["serde_with-3"] }
urlencoding = "2.1.3"

# Async utilities
async-trait = "0.1.88"

# Data structures
arrayvec = "0.7.6"

# Time handling
time = { version = "0.3.41", features = ["serde"] }

# System utilities
regex = "1.11.1"

# Compression
zstd = "0.13.3"

# Error handling
thiserror = "2.0.12"

# Image processing
image = { version = "0.25.6", features = ["avif"] }
rgb = "0.8"
[target.'cfg(windows)'.dependencies]
ravif = { version =  "0.12.0", default-features = false, features = ["threading"] }
[target.'cfg(unix)'.dependencies]
ravif = { version =  "0.12.0"}

