[package]
name = "muse"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime - optimized features
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "macros",
    "sync",
    "time",
    "process"
] }
tokio-util = { version = "0.7", features = ["io"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["compression-full","auth","cors"] }

# Database
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "postgres",
    "uuid",
    "time"
] }
mongodb = "3.3.0"

# Utilities
uuid = { version = "1.17.0", features = ["v4"] }
dotenvy = "0.15.7"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }

# Validation and security
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.17.0"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"]}
serde_json = "1.0.145"

# Encoding and data formats
bson = { version = "3.0.0", features = ["serde_with-3"] }

# Async utilities
async-trait = "0.1.88"

# Time handling
time = { version = "0.3.41", features = ["serde"] }

# Error handling
thiserror = "2.0.12"

# Audio metadata
lofty = "0.22"

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json"] }

# URL encoding for API queries
urlencoding = "2.1"

# Image processing
[target.'cfg(windows)'.dependencies]
ravif = { version =  "0.12.0", default-features = false, features = ["threading"] }
[target.'cfg(unix)'.dependencies]
ravif = { version =  "0.12.0"}
