[package]
name = "YtDownloader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
uuid = { version = "1.8", features = ["v4"] }

# Linux-specific crates go below
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.1", features = ["process", "fs"] }
memfd = "0.6"
libc = "0.2"
